@@ -2,10 +2,11 @@
 #  $Id$
 #
 %{!?version:%define version @product.version@}
-%{!?release:%define release @product.release.stamp@}
+%{!?plain_release:%define plain_release @product.release.stamp@}
+%{!?release:%define release %{plain_release}}
 %{!?releasenumber:%define releasenumber @product.release@}
 %{!?instprefix:%define instprefix @rpm.install.dir@}
-%{!?packagedir:%define packagedir @ant.project.name@-%version-%release}
+%{!?packagedir:%define packagedir @ant.project.name@-%version-%{releasenumber}}
 %{!?dbuser:%define dbuser @rpm.database.user@}
 %{!?dbpass:%define dbpass @rpm.database.password@}
 %{!?dbname:%define dbname @rpm.database.name@}
@@ -200,7 +201,7 @@ Version:		%version
 Copyright:		LGPL/GPL
 Group:			Applications/System
 
-Source:			%{name}-source-%{version}-%{release}.tar.gz
+Source:			%{name}-source-%{version}-%{plain_release}.tar.gz
 URL:			ftp://opennms.org/pub/releases/OpenNMS/
 BuildRoot:		%{_tmppath}/%{name}-%{version}-root
 
@@ -233,7 +234,7 @@ The web UI for OpenNMS.
 %prep
 
 %if %{standalone}
-tar -xvzf $RPM_SOURCE_DIR/%{name}-source-%{version}-%{release}.tar.gz -C $RPM_BUILD_DIR
+tar -xvzf $RPM_SOURCE_DIR/%{name}-source-%{version}-%{plain_release}.tar.gz -C $RPM_BUILD_DIR
 %define setupdir %{packagedir}/source
 %else
 %define setupdir @root.source@
